--- a/www/templates/formulas/anestecia_6.html
+++ b/www/templates/formulas/anestecia_6.html
@@ -12,7 +12,7 @@
         </div>
 
 
-   <form name="infoForm" class="infoFormTest" novalidate="" ng-submit="submit(infoForm, info)"> 
+   <form name="infoForm" class="infoFormTest" novalidate="" ng-submit="submit_creatina(infoForm, info)"> 
         
           <div class="list">
           
