init template 4 for adrenalina

--- a/www/templates/formulas/anestecia_4.html
+++ b/www/templates/formulas/anestecia_4.html
@@ -3,7 +3,7 @@
 	<ion-content class="has-header padding form-content">
 
 	<form name="myForm" novalidate>
-        <div class="list___">
+       <!-- <div class="list___">
             <label class="item item-input">
                 <input type="number" name="peso" placeholder="Ingrese Valor" ng-model="info.peso" ng-minlength="1" required>
 				<span class="input-label">Peso </span>
@@ -21,7 +21,7 @@
                 <span class="input-label">Dosis</span>
             </label>
 		
-        </div>
+        </div>-->
         <div class="padding">
             <p ng-show="myForm.diastolica.$error.required">* diastolica es requerido</p>
             <p ng-show="myForm.diastolica.$error.minlength">* diastolica must be longer than 5 characters</p>
