--- a/www/templates/formulas/anestecia_5.html
+++ b/www/templates/formulas/anestecia_5.html
@@ -2,7 +2,7 @@
 <ion-view title="Calcular">
 	<ion-content class="has-header padding form-content">
 
-	<form name="myForm" ng-submit="submitAdrenalina(infoForm1, info)" novalidate>
+	<form name="myForm" class="infoFormTest" ng-submit="submitAdrenalina(infoForm1, info)" novalidate>
 
  <div class="list">
 
